<resources>
    <string name="app_name">发送广播App</string>
    <string name="send_broadcast">发送全局广播</string>
    <string name="msg_dynamic">发送消息1--动态</string>
    <string name="msg_static">发送消息2--静态</string>
    <string name="send_local">发送本地广播</string>
    <string name="send_restrict_broadcast">发送一个受限制的广播</string>

    <string name="perlab_weatherchange">天气发生了变化</string>
    <string name="perdesc_weatherchange">通知天气发生了变化</string>


    <string name="perlab_wifistate">自定义的通知WIFI状态权限</string>
    <string name="perdesc_wifistate">通知我的WIFI状态</string>

</resources>
