<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/send_broadcast"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btn_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/msg_dynamic"
        android:textSize="18sp"
        android:onClick="onClickSendBroadcast"
        />


    <Button
        android:id="@+id/btn_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/msg_static"
        android:textSize="18sp"
        android:onClick="onClickSendBroadcast"
        />

    <Button
        android:id="@+id/btn_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_local"
        android:textSize="18sp"
        android:onClick="onClickSendBroadcast"
        />

    <Button
        android:id="@+id/btn_restrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_restrict_broadcast"
        android:textSize="18sp"
        android:onClick="onClickSendBroadcast"
        />

    <Button
        android:id="@+id/btn_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="发送天气状态"
        android:textSize="18sp"
        android:onClick="onClickSendBroadcast"
        />

</LinearLayout>